Proofreading: Improve flexibility of poster display for small screens, correct dashes in stretched-out words, fix wrong direction elison, add missed publication name

--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -86,13 +86,13 @@ p span.i2{
 p span.floatl{
 	display: inline-block;
 	float: left;
-	margin-left: 3em;
+	margin-left: 2%;
 }
 
 p span.floatr{
 	display: inline-block;
 	float: right;
-	margin-right: 3em;
+	margin-right: 2%;
 }
 
 #chapter-7 blockquote p:nth-of-type(6){
